# client_side_backend

./: Cargo.toml  Dockerfile  Gemfile  diesel.toml  docker-compose.yml  go.mod  go.sum
app/chewy/: events_index.rb  informations_index.rb
app/mailers/: user_mailer.rb
app/models/: area.rb  content.rb  event.rb  event_type.rb  feedback.rb  information.rb  tag.rb  user.rb  visit.rb  weight.rb
app/searches/: event_search.rb
cmd/museum/: main.go
config/: application.rb  cable.yml  chewy.yml  credentials.yml.enc  database.yml  routes.rb  settings.yml  sidekiq.yml  storage.yml
config/environments/: production.rb
configs/: config.go
db/: schema.rb
db/migrate/: 20240917172254_create_users.rb  20240917172744_create_events.rb  20240917172803_create_informations.rb  20240917172914_create_contents.rb  20240917172923_create_tags.rb  20240917172932_create_areas.rb  20240917172943_create_type_events.rb  20240917173625_create_weights.rb  20240917173811_create_visits.rb
internal/app/: main.go
internal/domain/: event.go  information.go  order.go
internal/event/: usecase.go
internal/jobs/: main.go
internal/like/: update_service.go
internal/pkg/: errors.go
internal/visit/: calculdate_visits.go  calculdate_visits_service.go
pkg/queues/: consumer.go  job.go  main.go  producer.go
src/: config.rs  global_search.rs  handler.rs  handlers.rs  main.rs  tasks.rs
src/api/: external.rs
src/config/: application.rs  config.rs  route.rs  routes.rs  web_server.rs
src/handlers/: billing.rs  events.rs  global_search.rs
src/models/: order.rs
src/tasks/: schedule.rs  (+1 more)
(+25 files in other folders)
